# SmartCharge

./: CMakeLists.txt  README.md
firmware/include/: BatteryPack.h  CANBus.h
firmware/src/: BatteryPack.cpp  CANBus.cpp  main.cpp
tools/: config.json  monitor.py  simulate_client.py
